test/runtime/fail/loop/lone_break.hy

// expect error: `break` not inside loop

if true {
	break
}
